@@ -1,6 +1,9 @@
 if host_machine.system() == 'linux'
 	subdir('posix')
 	conf.set('CSP_POSIX', 1)
+elif host_machine.system() == 'darwin'
+	subdir('macosx')
+	conf.set('CSP_MACOSX', 1)
 elif host_machine.system() == 'freertos'
 	subdir('freertos')
 	conf.set('CSP_FREERTOS', 1)
