@@ -4,8 +4,12 @@
 
 #if (CSP_ZEPHYR)
 #include <zephyr/kernel.h>
+#elif (CSP_MACOSX)
+#define __noinit __attribute__((section(NOINIT)))
+#define __packed __attribute__((__packed__))
+#define __unused __attribute__((__unused__))
 #else
-#define __noinit __attribute__((section(".noinit")))
+#define __noinit __attribute__((section(NOINIT)))
 #define __packed __attribute__((__packed__))
 #define __unused __attribute__((__unused__))
 #define __weak   __attribute__((__weak__))
