@@ -4,8 +4,8 @@
 
 #include <csp/csp_buffer.h>
 #include <csp/csp_debug.h>
+#include <csp/csp_endian.h>
 #include "csp_macro.h"
-#include <endian.h>
 
 #include "csp_conn.h"
 
